update trigger
