# gen/docs/swagger.json
@@ -121,6 +121,12 @@
                         "type": "string"
                     }
                 },
+                "discord_webhook": {
+                    "type": "string"
+                },
+                "send_notify": {
+                    "type": "boolean"
+                },
                 "tokens": {
                     "type": "array",
                     "items": {
@@ -129,32 +135,28 @@
                 }
             }
         },
+        "model.TokenPriceEma": {
+            "type": "object",
+            "properties": {
+                "metric": {
+                    "type": "string"
+                },
+                "resolution": {
+                    "$ref": "#/definitions/timeseries.Resolution"
+                },
+                "value": {
+                    "type": "number"
+                }
+            }
+        },
         "model.TokenPriceModel": {
             "type": "object",
             "properties": {
-                "ema20_1d": {
-                    "type": "number"
-                },
-                "ema20_1h": {
-                    "type": "number"
-                },
-                "ema20_1m": {
-                    "type": "number"
-                },
-                "ema20_4h": {
-                    "type": "number"
-                },
-                "ema7_1d": {
-                    "type": "number"
-                },
-                "ema7_1h": {
-                    "type": "number"
-                },
-                "ema7_1m": {
-                    "type": "number"
-                },
-                "ema7_4h": {
-                    "type": "number"
+                "ema": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.TokenPriceEma"
+                    }
                 },
                 "price_usd": {
                     "type": "number"
@@ -178,8 +180,15 @@
                     "description": "audit",
                     "type": "string"
                 },
+                "discord_webhook": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "string"
+                },
+                "send_notify": {
+                    "description": "discord info",
+                    "type": "boolean"
                 },
                 "token": {
                     "description": "token list",
@@ -213,6 +222,21 @@
                     "type": "integer"
                 }
             }
+        },
+        "timeseries.Resolution": {
+            "type": "integer",
+            "enum": [
+                0,
+                1,
+                2,
+                3
+            ],
+            "x-enum-varnames": [
+                "TIME_RESOLUTION_1_MIN",
+                "TIME_RESOLUTION_1_HOUR",
+                "TIME_RESOLUTION_4_HOURS",
+                "TIME_RESOLUTION_1_DAY"
+            ]
         }
     },
     "securityDefinitions": {
